# BeepChecker

./: LICENSE  README.md  build-frontend.js  package-lock.json  package.json
Installer/: beepchecker-installer.nsi
Portable/Files/beepchecker-portable/: license.txt
Source/BeepChecker/: BeepChecker.csproj  MainForm.Designer.cs  MainForm.cs  NativeMethods.cs  Program.cs  stylecop.json
Source/BeepChecker/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: FILE_ID.DIZ  LICENSE-installer.txt  LICENSE.txt  homepage.portmark.html
src-tauri/src/: lib.rs  main.rs
