[package]
name = "beepchecker"
version = "3.0.0"
description = "Rust backend and native command configuration for BeepChecker, a modern Tauri rewrite of a legacy Windows Forms app."
authors = [
  "The Hello World Writer <hello@thehelloworldwriter.com> (https://www.thehelloworldwriter.com)",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beepchecker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

